@@ -9,6 +9,7 @@
 ################################################################################
 include (CheckIncludeFiles)
 include (CheckLibraryExists) 
+include (CheckFunctionExists)
 
 # check needed include file
 check_include_files (dlfcn.h HAVE_DLFCN_H)
@@ -22,6 +23,8 @@ check_include_files (sys/stat.h HAVE_SYS_STAT_H)
 check_include_files (sys/types.h HAVE_SYS_TYPES_H)
 check_include_files (unistd.h HAVE_UNISTD_H)
 check_include_files("stdlib.h;stdarg.h;string.h;float.h" STDC_HEADERS)
+
+CHECK_FUNCTION_EXISTS(localeconv HAVE_LOCALECONV)
 
 # check libm need on unix 
 check_library_exists(m ceil "" HAVE_LIBM) 
